# ggsql

./: .gitignore  .nojekyll  CLAUDE.md  Cargo.toml  EXAMPLES.md  README.md  examples.html  index.html  installation.html  search.json  sitemap.xml
.github/workflows/: R-CMD-check.yaml  build.yaml
doc/: _brand.yml  _quarto.yml  examples.qmd  styles.scss
ggsql-R/: DESCRIPTION
ggsql-jupyter/: README.md
ggsql-jupyter/src/: display.rs  executor.rs  kernel.rs
ggsql-jupyter/tests/fixtures/: sample_notebook.ipynb  test_queries.sql
ggsql-jupyter/tests/quarto/: doc.qmd
ggsql-python/: pyproject.toml
ggsql-python/python/ggsql/: __init__.py
ggsql-python/tests/: test_ggsql.py
ggsql-vscode/: README.md
ggsql-vscode/examples/: sample.gsql
ggsql-vscode/src/: manager.ts
src/: Cargo.toml  cli.rs  execute.rs  lib.rs  rest.rs
src/parser/: ast.rs  builder.rs  error.rs  mod.rs  splitter.rs
src/plot/: main.rs  types.rs
src/plot/layer/geom/: histogram.rs  mod.rs
src/plot/scale/: breaks.rs  mod.rs  palettes.rs  types.rs
src/plot/scale/scale_type/: binned.rs  continuous.rs  date.rs  datetime.rs  discrete.rs  identity.rs  mod.rs  time.rs
src/plot/scale/transform/: asinh.rs  datetime.rs  identity.rs  log.rs  mod.rs  pseudo_log.rs  sqrt.rs  time.rs
src/reader/: connection.rs  data.rs  duckdb.rs  mod.rs
src/writer/: mod.rs  vegalite.rs
syntax/: index.html
syntax/clause/: draw.html  facet.html  label.html  project.html  scale.html  visualise.html
syntax/layer/: bar.html  histogram.html  line.html  path.html  point.html
syntax_testing/: ggplot2_book.qmd  r4ds_examples.qmd
tree-sitter-ggsql/: grammar.js
tree-sitter-ggsql/queries/: highlights.scm
tree-sitter-ggsql/test/corpus/: basic.txt
tree-sitter-vizql/: Cargo.toml  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-vizql/bindings/c/: tree-sitter-vizql.pc.in
tree-sitter-vizql/bindings/c/tree_sitter/: tree-sitter-vizql.h
tree-sitter-vizql/bindings/node/: binding.cc  binding_test.js  index.js
tree-sitter-vizql/bindings/python/: __init__.py  binding.c
tree-sitter-vizql/bindings/rust/: build.rs  lib.rs
tree-sitter-vizql/queries/: highlights.scm
tree-sitter-vvsql/: grammar.js
tree-sitter-vvsql/test/corpus/: basic.txt
