[workspace]
members = [
    "tree-sitter-vizql",
    "src"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VizQL Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/vizql/vizql"
homepage = "https://vizql.org"
description = "SQL extension for declarative data visualization"

[workspace.dependencies]
# Parsing
tree-sitter = "0.25"

# Data processing
polars = { version = "0.43", features = ["lazy", "sql"] }

# Readers
duckdb = { version = "1.1", features = ["bundled"] }
postgres = "0.19"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
rusqlite = "0.32"

# Writers
plotters = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Python bindings (future)
pyo3 = "0.20"

# Testing
proptest = "1.4"

# Utilities
regex = "1.10"